[gd_scene load_steps=2 format=3 uid="uid://cresultmodal123"]

[ext_resource type="Script" path="res://scripts/ui/puzzle_result_modal.gd" id="1_modal"]

[node name="PuzzleResultModal" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_modal")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Correct!"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Well done!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 10
alignment = 1

[node name="TryAgainButton" type="Button" parent="Panel/VBox/ButtonContainer"]
visible = false
layout_mode = 2
text = "Try Again"

[node name="SolutionButton" type="Button" parent="Panel/VBox/ButtonContainer"]
visible = false
layout_mode = 2
text = "Show Solution"

[node name="NextPuzzleButton" type="Button" parent="Panel/VBox/ButtonContainer"]
layout_mode = 2
text = "Next Puzzle"
